[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/Rocky Roads/UI/simpleArrow.png" type="Texture" id=1]
[ext_resource path="res://Resources/Rocky Roads/UI/image(2).png" type="Texture" id=2]
[ext_resource path="res://Resources/Rocky Roads/UI/image.png" type="Texture" id=3]
[ext_resource path="res://Resources/Rocky Roads/UI/redArrow.png" type="Texture" id=4]
[ext_resource path="res://Resources/Rocky Roads/UI/image.jpg" type="Texture" id=5]
[ext_resource path="res://Resources/Rocky Roads/UI/palace.png" type="Texture" id=6]
[ext_resource path="res://Resources/Rocky Roads/UI/map2.jpg" type="Texture" id=7]
[ext_resource path="res://Scripts/levelMenu.gd" type="Script" id=8]

[node name="levelMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -1.0
margin_right = 8.0
margin_bottom = -1.0
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 516.5, 318.5 )
scale = Vector2( 1.043, 1.07143 )
texture = ExtResource( 7 )

[node name="returnButton" type="TouchScreenButton" parent="."]
position = Vector2( 127, 92 )
rotation = -3.14159
scale = Vector2( 7.03241, 5.74834 )
normal = ExtResource( 1 )

[node name="parkingLotButton" type="TouchScreenButton" parent="."]
position = Vector2( 18, 255 )
scale = Vector2( 0.217773, 0.205212 )
normal = ExtResource( 3 )

[node name="RedArrow" type="Sprite" parent="parkingLotButton"]
position = Vector2( 544.792, 803.988 )
rotation = 1.56207
scale = Vector2( 0.935025, 1.5532 )
texture = ExtResource( 4 )

[node name="TouchScreenButton3" type="TouchScreenButton" parent="."]
position = Vector2( 484, 105 )
scale = Vector2( 0.0948718, 0.0695157 )
normal = ExtResource( 2 )

[node name="RedArrow" type="Sprite" parent="TouchScreenButton3"]
position = Vector2( -1745.59, 1598.59 )
rotation = -4.71239
scale = Vector2( 2.67768, 3.70018 )
texture = ExtResource( 4 )

[node name="TouchScreenButton4" type="TouchScreenButton" parent="."]
position = Vector2( 201, 57 )
scale = Vector2( 0.405455, 0.334247 )
normal = ExtResource( 5 )

[node name="RedArrow" type="Sprite" parent="TouchScreenButton4"]
position = Vector2( 974.899, 638.642 )
rotation = 1.5708
scale = Vector2( 0.600498, 0.83109 )
texture = ExtResource( 4 )

[node name="TouchScreenButton5" type="TouchScreenButton" parent="."]
position = Vector2( 656, 285 )
scale = Vector2( 0.523474, 0.55 )
normal = ExtResource( 6 )

[node name="RedArrow" type="Sprite" parent="TouchScreenButton5"]
position = Vector2( 225.668, 318.552 )
rotation = -4.71239
scale = Vector2( 0.374478, 0.640687 )
texture = ExtResource( 4 )

[connection signal="pressed" from="returnButton" to="." method="_on_returnButton_pressed"]
[connection signal="pressed" from="parkingLotButton" to="." method="_on_parkingLotButton_pressed"]
[connection signal="pressed" from="TouchScreenButton3" to="." method="_on_TouchScreenButton3_pressed"]
[connection signal="pressed" from="TouchScreenButton4" to="." method="_on_TouchScreenButton4_pressed"]
[connection signal="pressed" from="TouchScreenButton5" to="." method="_on_TouchScreenButton5_pressed"]
